@@ -1,4 +1,9 @@
 shared = require "shared"
 
+-- ignore some locomotives for dynamic motor cars
+railway_motorcar_ignored = {
+  "ee-super-locomotive", -- EditorExtensions
+}
+
 require "prototypes.motorcar"
 require "prototypes.equipment"
